Added script to auto-gen portfolio items

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@aws-sdk/client-cloudfront": "^3.504.0",
     "@aws-sdk/client-s3": "^3.470.0",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.5",
     "@types/node": "^20.10.4",
     "@types/qs": "^6.9.10",
     "@types/react": "^18.2.15",
@@ -36,11 +37,13 @@
     "@vitejs/plugin-react": "^4.0.3",
     "aws-sdk": "^2.1515.0",
     "bluebird": "^3.7.2",
+    "canvas": "^3.0.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "fs": "^0.0.1-security",
+    "image-size": "^1.2.0",
     "mime": "^4.0.0",
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
@@ -49,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "sass": "^1.69.5",
+    "sharp": "^0.33.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-mkcert": "^1.17.1",
