--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force",
-    "build": "vite build && cp -r ./assets/storybook-static ./dist/assets",
+    "build": "node buildPortfolio.js && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "push": "env-cmd node ./push.js",
+    "pushWithoutMedia": "IGNORE_MEDIA=true env-cmd node ./push.js",
+    "pushWithMedia": "IGNORE_MEDIA=false env-cmd node ./push.js",
     "invalidate": "env-cmd node ./invalidate.js",
-    "deploy": "yarn build && yarn push && yarn invalidate",
+    "deploy": "yarn build && yarn pushWithoutMedia && yarn invalidate",
     "preview": "vite preview"
   },
   "dependencies": {
