--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force",
-    "build": "node buildPortfolio.js && vite build",
+    "buildPortfolio": "node buildPortfolio.js",
+    "build": "yarn buildPortfolio && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "pushWithoutMedia": "IGNORE_MEDIA=true env-cmd node ./push.js",
     "pushWithMedia": "IGNORE_MEDIA=false env-cmd node ./push.js",
