--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vite": "^4.4.5",
     "vite-plugin-mkcert": "^1.17.1",
     "vite-plugin-svgr": "^4.2.0",
+    "vite-svg-loader": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.2"
   },
   "packageManager": "yarn@4.0.2",
